TDP-2497: fix hidden bootstrap overflow (#310)
* TDP-2497: fix hidden bootstrap overflow

* TDP-2497: Fix "Internet Explorer does not support Object.assign method"

--- a/dataprep-webapp/src/app/components/datagrid/header/_datagrid-header.scss
+++ b/dataprep-webapp/src/app/components/datagrid/header/_datagrid-header.scss
@@ -59,12 +59,10 @@
 
 	.grid-header-menu {
 		@include menu-list;
-		box-shadow: none;
-		font-family: $base-font-family;
 		padding: 0;
-		li {
-			height: 20px;
-		}
+		font-family: $base-font-family;
+		overflow: visible;
+		box-shadow: none;
 	}
 
 	.grid-header-title-input {
